docs/.vuepress/styles/index.scss
$sosGreen: #96A407;
$sosBlue: #388AA0;
$sosOrange: #ED7900;
$sosRed: #A50007;

$accentColor: #234E5C;
$textColor: #2c3e50;
$borderColor: #eaecef;
$codeBgColor: #282c34;
$arrowBgColor: #ccc;
$badgeTipColor: #42b983;
$badgeWarningColor: darken(#ffe564, 35%);
$badgeErrorColor: #DA5961;

// layout
$navbarHeight: 3.6rem;
$sidebarWidth: 20rem;
$contentWidth: 640px;
$homePageWidth: 960px;

// responsive breakpoints
$MQNarrow: 959px;
$MQMobile: 719px;
$MQMobileNarrow: 419px;

$color_1: $sosRed;
$color_2: #666;
$color_3: #575757;
$color_4: #2c3e50;
$color_5: #2d5d82;
$color_6: #4a4a4a;
$background-color_1: #fff;
$background-color_2: #f0f4f8;
$background-color_3: #f3f5f7;
$background-color_4: #f5f5f5;
$border-color_1: #bbb;
$border-color_2: #999;
$border-color_3: $sosGreen;
$border-color_4: $sosBlue;

:root {
  // brand colors
  --c-brand: #3eaf7c;
  --c-brand-light: #4abf8a;

  // background colors
  --c-bg: #ffffff;
  --c-bg-light: #f3f4f5;
  --c-bg-lighter: #eeeeee;
  --c-bg-dark: #ebebec;
  --c-bg-darker: #e6e6e6;
  --c-bg-navbar: var(--c-bg);
  --c-bg-sidebar: var(--c-bg);
  --c-bg-arrow: #cccccc;

  // text colors
  --c-text: #2c3e50;
  --c-text-accent: var(--c-brand);
  --c-text-light: #3a5169;
  --c-text-lighter: #4e6e8e;
  --c-text-lightest: #6a8bad;
  --c-text-quote: #999999;

  // border colors
  --c-border: #eaecef;
  --c-border-dark: #dfe2e5;

  // custom container colors
  --c-tip: #42b983;
  --c-tip-bg: var(--c-bg-light);
  --c-tip-title: var(--c-text);
  --c-tip-text: var(--c-text);
  --c-tip-text-accent: var(--c-text-accent);
  --c-warning: #ffc310;
  --c-warning-bg: #fffae3;
  --c-warning-bg-light: #fff3ba;
  --c-warning-bg-lighter: #fff0b0;
  --c-warning-border-dark: #f7dc91;
  --c-warning-details-bg: #fff5ca;
  --c-warning-title: #f1b300;
  --c-warning-text: #746000;
  --c-warning-text-accent: #edb100;
  --c-warning-text-light: #c1971c;
  --c-warning-text-quote: #ccab49;
  --c-danger: #f11e37;
  --c-danger-bg: #ffe0e0;
  --c-danger-bg-light: #ffcfde;
  --c-danger-bg-lighter: #ffc9c9;
  --c-danger-border-dark: #f1abab;
  --c-danger-details-bg: #ffd4d4;
  --c-danger-title: #ed1e2c;
  --c-danger-text: #660000;
  --c-danger-text-accent: #bd1a1a;
  --c-danger-text-light: #b5474d;
  --c-danger-text-quote: #c15b5b;
  --c-details-bg: #eeeeee;

  // badge component colors
  --c-badge-tip: var(--c-tip);
  --c-badge-warning: #ecc808;
  --c-badge-warning-text: var(--c-bg);
  --c-badge-danger: #dc2626;
  --c-badge-danger-text: var(--c-bg);

  // transition vars
  --t-color: 0.3s ease;
  --t-transform: 0.3s ease;

  // code blocks vars
  --code-bg-color: #282c34;
  --code-hl-bg-color: rgba(0, 0, 0, 0.66);
  --code-ln-color: #9e9e9e;
  --code-ln-wrapper-width: 3.5rem;

  // font vars
  --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
    Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
  --font-family-code: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;

  // layout vars
  --navbar-height: 3.6rem;
  --navbar-padding-v: 0.7rem;
  --navbar-padding-h: 1.5rem;
  --sidebar-width: 20rem;
  --sidebar-width-mobile: calc(var(--sidebar-width) * 0.82);
  --content-width: 740px;
  --homepage-width: 960px;
}

html.dark {
  // brand colors
  --c-brand: #3aa675;
  --c-brand-light: #349469;

  // background colors
  --c-bg: #22272e;
  --c-bg-light: #2b313a;
  --c-bg-lighter: #262c34;
  --c-bg-dark: #343b44;
  --c-bg-darker: #37404c;

  // text colors
  --c-text: #adbac7;
  --c-text-light: #96a7b7;
  --c-text-lighter: #8b9eb0;
  --c-text-lightest: #8094a8;

  // border colors
  --c-border: #3e4c5a;
  --c-border-dark: #34404c;

  // custom container colors
  --c-tip: #318a62;
  --c-warning: #e0ad15;
  --c-warning-bg: #2d2f2d;
  --c-warning-bg-light: #423e2a;
  --c-warning-bg-lighter: #44442f;
  --c-warning-border-dark: #957c35;
  --c-warning-details-bg: #39392d;
  --c-warning-title: #fdca31;
  --c-warning-text: #d8d96d;
  --c-warning-text-accent: #ffbf00;
  --c-warning-text-light: #ddb84b;
  --c-warning-text-quote: #ccab49;
  --c-danger: #fc1e38;
  --c-danger-bg: #39232c;
  --c-danger-bg-light: #4b2b35;
  --c-danger-bg-lighter: #553040;
  --c-danger-border-dark: #a25151;
  --c-danger-details-bg: #482936;
  --c-danger-title: #fc2d3b;
  --c-danger-text: #ea9ca0;
  --c-danger-text-accent: #fd3636;
  --c-danger-text-light: #d9777c;
  --c-danger-text-quote: #d56b6b;
  --c-details-bg: #323843;

  // badge component colors
  --c-badge-warning: var(--c-warning);
  --c-badge-warning-text: #3c2e05;
  --c-badge-danger: var(--c-danger);
  --c-badge-danger-text: #401416;

  // code blocks vars
  --code-hl-bg-color: #363b46;
}

.sr-only,
.site-name {
  position: absolute;
  left: -10000px;
  width: 1px;
  height: 1px;
  top: auto;
  overflow: hidden;
}

body {
  font-size: 17px;
}

summary {
  + {
    * {
      margin-top: 1rem;
    }
  }
}

.sidebar {
  .sidebar-sub-headers {
    font-size: 1em;
  }
}

.navbar {
  .home-link {
    span.site-name {
      display: none !important;
    }
  }
}

a.active.sidebar-link {
  color: $color_1 !important;
}

.page-edit {
  .last-updated {
    .time {
      color: $color_2 !important;
    }
  }
}

blockquote {
  color: $color_3;
}

.home {
  .hero {
    display: none;

    img {
      max-height: 430px;
    }

    .description {
      max-width: 40rem !important;
      font-size: calc(16px + (32 - 16) * ((100vw - 300px) / (1600 - 300))) !important;
      line-height: calc(1.3em + (1.5 - 1.2) * ((100vw - 300px) / (1600 - 300))) !important;
      color: $color_4 !important;
    }
  }

  .feature {
    flex-grow: 1 !important;
    flex-basis: 23% !important;
    max-width: 23% !important;
  }
}

.footer {
  font-size: 0.9rem;
}

.footer-links {
  text-align: center;
  font-size: 0.9rem;
  padding: 1rem;

  a {
    color: $color_5;
  }

  .align-right {
    text-align: right;
  }

  .align-left {
    text-align: left;
  }
}

dt {
  font-weight: bolder;
}

dd {
  margin-bottom: 1em;
}

figcaption {
  text-align: center;
}
/* ... */

